--- a/.dockerignore
+++ b/.dockerignore
@@ -17,5 +17,6 @@ src/admin/vendors/flot/**/node_modules
 src/admin/vendors/jGrowl/**/.DS_Store
 fly.toml
 
+mysql/
 .DS_Store
-/src/admin/uploads/
+# /src/admin/uploads/
